--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,6 +3,9 @@ version: "3"
 services:
   api:
     build: .
+    image: $DOCKER_IMAGE
+    env_file:
+      - .env
     logging:
       driver: json-file
       options:
