--- a/requirements.txt
+++ b/requirements.txt
@@ -44,6 +44,7 @@ pydantic==1.9.2
 pyparsing==3.0.9
 PySocks==1.7.1
 python-dateutil==2.8.2
+python-dotenv==0.20.0
 python-multipart==0.0.5
 pytz==2022.2.1
 requests==2.28.1
