--- a/requirements.txt
+++ b/requirements.txt
@@ -20,6 +20,7 @@ google-pasta==0.2.0
 grpcio==1.47.0
 h11==0.13.0
 h5py==3.7.0
+httptools==0.4.0
 idna==3.3
 importlib-metadata==4.12.0
 itsdangerous==2.1.2
@@ -47,6 +48,7 @@ python-dateutil==2.8.2
 python-dotenv==0.20.0
 python-multipart==0.0.5
 pytz==2022.2.1
+PyYAML==6.0
 requests==2.28.1
 requests-oauthlib==1.3.1
 retina-face==0.0.12
@@ -66,6 +68,9 @@ tqdm==4.64.0
 typing_extensions==4.3.0
 urllib3==1.26.12
 uvicorn==0.18.3
+uvloop==0.16.0
+watchfiles==0.16.1
+websockets==10.3
 Werkzeug==2.2.2
 wrapt==1.14.1
 zipp==3.8.1
